<resources>
    <string name="app_name" translatable="false">Parkman</string>
    <plurals name="place_count">
        <item quantity="one">%d place</item>
        <item quantity="many">%d places</item>
    </plurals>
    <string name="refresh">Refresh data</string>
    <string name="data_loading">Fetching data. Please wait…</string>
    <string name="data_error">An error occurred! Can\'t fetch data!</string>
    <string name="not_available">All places occupied!</string>
    <string name="available">Free places available!</string>
    <string name="places_other">Free places on other parks:</string>
    <string name="places_activity">Place availability changed</string>
    <string name="parks_header">Free parking places (live data):</string>
    <string name="service_label">Parkman Data Fetch Service</string>
    <string name="service_title">Parkman - live data</string>
    <string name="service_description">Parking lot places are being monitored in background</string>
    <string name="tts_no_more">Attention! No more places at %s parking lot</string>
    <string name="tts_few">Places are available at %s parking lot</string>
    <string name="action_stop">Stop</string>
    <string name="freeplace_channel">Place state change notifications</string>
    <string name="freeplace_new_title">New free places!</string>
    <string name="freeplace_end_title">No more free places!</string>
    <string name="availability_chart_label">Free place availability chart:</string>
    <string name="park_details">Parking details</string>
    <string name="free_hour">Free places at hour</string>
    <string name="calendar_label">Data calendar:</string>
    <string name="week_1">Mo</string>
    <string name="week_2">Tu</string>
    <string name="week_3">We</string>
    <string name="week_4">Th</string>
    <string name="week_5">Fr</string>
    <string name="week_6">Sa</string>
    <string name="week_7">Su</string>
    <string name="chart_no_data">No data available</string>
</resources>