<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/purple_500">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_cars" />

            <TextView
                android:id="@+id/label_park_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:padding="16dp"
                android:textColor="#fff"
                android:textSize="28sp"
                android:textStyle="bold" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/calendar_label"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/prev_month"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:text="&lt;" />

            <TextView
                android:id="@+id/month_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/next_month"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:text="&gt;" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/calendar_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/week_1"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/week_2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/week_3"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/week_4"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/week_5"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/week_6"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/week_7"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold" />
            </LinearLayout>

            <cz.swisz.parkman.gui.views.CalendarView
                android:id="@+id/calendar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/availability_chart_label"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/park_chart"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="10dp" />

    </LinearLayout>
</ScrollView>